src/components/UserSchedule.css
.schedule_page {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.user_schedule_container {
  display: grid;
  width: 80%;
  max-width: 1200px;
  grid-template-columns: auto repeat(7, 1fr);
  grid-row-gap: 2px;
  grid-column-gap: 1px;
  margin-bottom: 40px;
}

.user_schedule_btns {
  display: flex;
  align-items: center;
  /* justify-content: center; */
  background: #D2F7F3;
  color: #112138;
}

.user_schedule_btns li:hover {
  cursor: pointer;
}

.user_schedule_position {
  background: #203c64;
  text-align: center;
  color: #D2F7F3;
}

.user_schedule_name {
  display: flex;
  align-items: center;
  justify-content: center;
  background: #112138;
  color: white;
  text-align: center;
  padding: 10px;
}

.contact_links {
  color: white;
  text-decoration: none;
}

.contact_links:hover {
  color: #129482;
}

.logged_in {
  background: #c0a115;
  color: #112138;
  text-align: center;
}
.user_schedule_days {
  background: #203c64;
  color: #D2F7F3;
  text-align: center;
}

.user_day_number {
  color: #129482;
}

.select_save {
  display: flex;
  border: solid;
  margin: 100px 0 20px 0;
} 

.month_row-current {
  margin-top: 150px;
}

.selected_month {
  display: flex;  
  flex-direction: column;
  align-items: center;
  width: 80%;
  max-width: 1200px;
  border: solid red;
}

.month-current {
  font-size: 40px;
  margin: 0px 10px 40px 0px;
  color: #112138;
}

.month-selected {
  font-size: 40px;
  margin: 0px 10px 40px 0px;
  color: #112138;
}

.current {
  background: #c0a115;
  color: #112138;
  text-align: center;
}

.user_schedule_shifts {
  border:  solid #112138;
}

li {
  list-style-type: none
}

.green {
  color: rgb(33, 206, 33);
  font-weight: bold;
  font-size: 18px;
}

.red {
  color: red;
  font-weight: bold;
  font-size: 18px;
}

